# haiven-mcp-server

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  README.md  mcp_server.py  pyproject.toml  test_container.sh  test_mcp_client.py  test_simple_mcp.py  upgrade-dependencies.py
.cursor/rules/: backend-rules.mdc  frontend-rules.mdc  test-rules.mdc
.github/workflows/: build.yml  pre-commit.yml
.precommit/: check_header.sh
config_examples/: api-key-config.json  development-config.json  docker-config.json  environment.env.example
docs/: AGENT.md  AUTHENTICATION.md  BUILD_STRATEGIES.md  CASPER_WORKFLOW_INTEGRATION.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  TROUBLESHOOTING.md  USER_SETUP_GUIDE.md
docs/adr/: 001_adr_mcp_server_deployment.md
scripts/: build_multiarch.sh  dev_setup.sh  generate_config.py  install.sh  start_server.sh  test_docker_image.sh  test_multiarch.sh
src/: __init__.py  mcp_server.py
src/services/: __init__.py  prompt_service.py
src/tools/: __init__.py  base_tool.py  get_casper_workflow.py  get_prompt_text.py  get_prompts.py  registry.py
tests/: test_casper_workflow.py  test_integration.py  test_mcp_connection.py  test_mcp_server.py  test_prompt_service.py  test_prompts.py  test_setup.py  test_windsurf_mcp.py
tests/tools/: test_tools.py
