[tool.poetry]
name = "haiven-mcp-server"
version = "1.0.0"
description = "Model Context Protocol server for Haiven AI prompts API"
authors = ["Thoughtworks <haiven@thoughtworks.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.15.0"
httpx = "^0.28.1"
pydantic = "^2.11.9"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"
pre-commit = "^4.3.0"
toml = "^0.10.2"

[tool.poetry.scripts]
haiven-mcp-server = "src.mcp_server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=140
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
